--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.md
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.md
@@ -21,7 +21,7 @@
     <th>Checked in</th>
   </tr>
   <tr>
-    <td rowspan="43" style="vertical-align:top;"><a href="../../../requirements/astm/f3411/v19.md">astm.f3411.v19</a></td>
+    <td rowspan="43" style="vertical-align:top;"><a href="../../../requirements/astm/f3411/v19.md">astm<br>.f3411<br>.v19</a></td>
     <td><a href="../../../requirements/astm/f3411/v19.md">A2-6-1,1a</a></td>
     <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v19/dss_interoperability.md">ASTM F3411-19 NetRID DSS interoperability</a></td>
@@ -63,12 +63,12 @@
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v19.md">A2-6-1,3c</a></td>
-    <td>Implemented</td>
+    <td>In progress</td>
     <td><a href="../../../scenarios/astm/netrid/v19/dss_interoperability.md">ASTM F3411-19 NetRID DSS interoperability</a></td>
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v19.md">A2-6-1,3d</a></td>
-    <td>Implemented</td>
+    <td>In progress</td>
     <td><a href="../../../scenarios/astm/netrid/v19/dss_interoperability.md">ASTM F3411-19 NetRID DSS interoperability</a></td>
   </tr>
   <tr>
@@ -237,7 +237,7 @@
     <td><a href="../../../scenarios/astm/netrid/v19/nominal_behavior.md">ASTM NetRID nominal behavior</a></td>
   </tr>
   <tr>
-    <td rowspan="4" style="vertical-align:top;"><a href="../../../requirements/interuss/automated_testing/rid/injection.md">interuss.automated_testing.rid.injection</a></td>
+    <td rowspan="4" style="vertical-align:top;"><a href="../../../requirements/interuss/automated_testing/rid/injection.md">interuss<br>.automated_testing<br>.rid<br>.injection</a></td>
     <td><a href="../../../requirements/interuss/automated_testing/rid/injection.md">DeleteTestSuccess</a></td>
     <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v19/misbehavior.md">ASTM NetRID SP clients misbehavior handling</a><br><a href="../../../scenarios/astm/netrid/v19/nominal_behavior.md">ASTM NetRID nominal behavior</a></td>
@@ -249,7 +249,7 @@
   </tr>
   <tr>
     <td><a href="../../../requirements/interuss/automated_testing/rid/injection.md">UpsertTestResult</a></td>
-    <td>Implemented</td>
+    <td>Planned</td>
     <td><a href="../../../scenarios/astm/netrid/v19/nominal_behavior.md">ASTM NetRID nominal behavior</a></td>
   </tr>
   <tr>
@@ -258,7 +258,7 @@
     <td><a href="../../../scenarios/astm/netrid/v19/misbehavior.md">ASTM NetRID SP clients misbehavior handling</a><br><a href="../../../scenarios/astm/netrid/v19/nominal_behavior.md">ASTM NetRID nominal behavior</a></td>
   </tr>
   <tr>
-    <td rowspan="2" style="vertical-align:top;"><a href="../../../requirements/interuss/automated_testing/rid/observation.md">interuss.automated_testing.rid.observation</a></td>
+    <td rowspan="2" style="vertical-align:top;"><a href="../../../requirements/interuss/automated_testing/rid/observation.md">interuss<br>.automated_testing<br>.rid<br>.observation</a></td>
     <td><a href="../../../requirements/interuss/automated_testing/rid/observation.md">ObservationSuccess</a></td>
     <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v19/nominal_behavior.md">ASTM NetRID nominal behavior</a></td>
