Document FlightPlannerInterface check

--- a/monitoring/uss_qualifier/suites/faa/laanc/v7.md
+++ b/monitoring/uss_qualifier/suites/faa/laanc/v7.md
@@ -79,7 +79,12 @@
     <td><a href="../../../scenarios/faa/laanc/v7/scenario2.md">FAA LAANC: Overlapping authorizations</a></td>
   </tr>
   <tr>
-    <td rowspan="1" style="vertical-align:top;"><a href="../../../requirements/interuss/automated_testing/faa/laanc/v1/uss.md">interuss<br>.automated_testing<br>.faa<br>.laanc<br>.v1<br>.uss</a></td>
+    <td rowspan="2" style="vertical-align:top;"><a href="../../../requirements/interuss/automated_testing/faa/laanc/v1/uss.md">interuss<br>.automated_testing<br>.faa<br>.laanc<br>.v1<br>.uss</a></td>
+    <td><a href="../../../requirements/interuss/automated_testing/faa/laanc/v1/uss.md">FlightPlannerInterface</a></td>
+    <td>Implemented</td>
+    <td><a href="../../../scenarios/faa/laanc/v7/scenario2.md">FAA LAANC: Overlapping authorizations</a></td>
+  </tr>
+  <tr>
     <td><a href="../../../requirements/interuss/automated_testing/faa/laanc/v1/uss.md">IncludeReferenceCode</a></td>
     <td>Implemented</td>
     <td><a href="../../../scenarios/faa/laanc/v7/scenario2.md">FAA LAANC: Overlapping authorizations</a></td>
