--- a/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3411/v22a.md
@@ -26,7 +26,10 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 * <tt>NET0230</tt>
 * <tt>NET0240</tt>
 * <tt>NET0250</tt>
-* <tt>NET0260</tt>
+* NET0260
+  * <tt>NET0260,NetSpDataResponseTime95thPercentile</tt>: 95th percentile response time
+  * <tt>NET0260,NetSpDataResponseTime99thPercentile</tt>: 99th percentile response time
+  * <tt>NET0260,NearRealTime</tt>: Near-real-time position information for applicable UAs
   * <tt>NET0260,Table1,1</tt>: UAS ID, any option
     * <tt>NET0260,Table1,1a</tt>: UAS ID, option 1 - serial number
     * <tt>NET0260,Table1,1b</tt>: UAS ID, option 2 - registration id
@@ -136,7 +139,9 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 
 ### USS-USS Interfaces
 
-* <tt>NET0710</tt>
+* NET0710
+  * <tt>NET0710,1</tt>
+  * <tt>NET0710,2</tt>
 * <tt>NET0720</tt>
 * <tt>NET0730</tt>
 * <tt>NET0740</tt>
@@ -147,7 +152,13 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 
 * <tt>DSS0010</tt>
 * <tt>DSS0020</tt>
-* <tt>DSS0030</tt>
+* DSS0030
+  * <tt>DSS0030,a</tt>
+  * <tt>DSS0030,b</tt>
+  * <tt>DSS0030,c</tt>
+  * <tt>DSS0030,d</tt>
+  * <tt>DSS0030,e</tt>
+  * <tt>DSS0030,f</tt>
 * <tt>DSS0040</tt>
 * <tt>DSS0050</tt>
 * <tt>DSS0060</tt>
@@ -157,25 +168,28 @@ For information on these requirements, refer to [the ASTM standard F3411-22a](ht
 
 * <tt>DSS0110</tt>
 * <tt>DSS0120</tt>
-* <tt>DSS0130</tt>: Data Synchronization
-  * <tt>DSS0130,2,a</tt>: Subscription ID Synchronization
-  * <tt>DSS0130,2,b</tt>: Subscription Owner Synchronization
-  * <tt>DSS0130,2,c</tt>: Subscription URL Synchronization
-  * <tt>DSS0130,2,d</tt>: Subscription Start/End Times Synchronization
-  * <tt>DSS0130,2,f</tt>: Subscription Notification Count Synchronization
-  * <tt>DSS0130,3,a</tt>: ISA ID Synchronization
-  * <tt>DSS0130,3,b</tt>: ISA Owner Synchronization
-  * <tt>DSS0130,3,c</tt>: ISA URL Synchronization
-  * <tt>DSS0130,3,d</tt>: ISA Start/End Times Synchronization
+* DSS0130: Data Synchronization
+  * <tt>DSS0130,1</tt>: Cell ID
+  * <tt>DSS0130,2,a</tt>: Subscription ID
+  * <tt>DSS0130,2,b</tt>: Subscription Owner
+  * <tt>DSS0130,2,c</tt>: Subscription URL
+  * <tt>DSS0130,2,d</tt>: Subscription Start/End Times
+  * <tt>DSS0130,2,e</tt>: Subscription Area
+  * <tt>DSS0130,2,f</tt>: Subscription Notification Count
+  * <tt>DSS0130,3,a</tt>: ISA ID
+  * <tt>DSS0130,3,b</tt>: ISA Owner
+  * <tt>DSS0130,3,c</tt>: ISA URL
+  * <tt>DSS0130,3,d</tt>: ISA Start/End Times
+  * <tt>DSS0130,3,e</tt>: ISA Area
 
 Elaboration on testing methods for DSS0130 in section A2.6.1 implies the following requirements:
 
-1. *PUT Identification Service Area:* Tests must demonstrate that after an ISA is (<tt>A2-6-1,1a</tt>) created or (<tt>A2-6-1,1b</tt>) modified, it can (<tt>A2-6-1,1c</tt>) be retrieved from all DSS instances for the region with consistent results. In addition, the end time for an ISA governs when the DSS automatically removes it from the DSS. Tests must demonstrate that (<tt>A2-6-1,1d</tt>) automatic removal of ISAs occurs on all DSS instances.
-2. *DELETE Identification Service Area:* Tests must demonstrate that (<tt>A2-6-1,2a</tt>) an ISA can be deleted on any DSS instance and (<tt>A2-6-1,2b</tt>) the deletion is reflected on all other DSS instances.
-3. *PUT Subscription:* Tests must demonstrate that a subscription can be (<tt>A2-6-1,3a</tt>) created on any instance and notifications for the subscription are triggered when intersecting ISAs are (<tt>A2-6-1,3b</tt>) added or (<tt>A2-6-1,3c</tt>) modified to all other instances. In addition, the end time for a subscription governs when the DSS automatically removes it from the DSS. Tests must demonstrate that (<tt>A2-6-1,3d</tt>) automatic removal of subscriptions occurs on all DSS instances.
-4. *DELETE Subscription:* Tests must demonstrate that a subscription can be (<tt>A2-6-1,4a</tt>) deleted on any DSS instance and (<tt>A2-6-1,4b</tt>) the deletion is reflected on all other DSS instances.
-5. *GET Subscription:* (<tt>A2-6-1,5</tt>) Tests must demonstrate that a specific subscription can be retrieved from any DSS instance with consistent results.
-6. *GET Subscriptions*: (<tt>A2-6-1,6</tt>) Tests must demonstrate that the complete set of subscriptions in an area for a Net-RID Display Provider can be retrieved from any DSS instance with consistent results.
+1. *PUT Identification Service Area:* Tests must demonstrate that after an ISA is (<tt>DSS0130,A2-6-1,1a</tt>) created or (<tt>DSS0130,A2-6-1,1b</tt>) modified, it can (<tt>DSS0130,A2-6-1,1c</tt>) be retrieved from all DSS instances for the region with consistent results. In addition, the end time for an ISA governs when the DSS automatically removes it from the DSS. Tests must demonstrate that (<tt>DSS0130,A2-6-1,1d</tt>) automatic removal of ISAs occurs on all DSS instances.
+2. *DELETE Identification Service Area:* Tests must demonstrate that (<tt>DSS0130,A2-6-1,2a</tt>) an ISA can be deleted on any DSS instance and (<tt>DSS0130,A2-6-1,2b</tt>) the deletion is reflected on all other DSS instances.
+3. *PUT Subscription:* Tests must demonstrate that a subscription can be (<tt>DSS0130,A2-6-1,3a</tt>) created on any instance and notifications for the subscription are triggered when intersecting ISAs are (<tt>DSS0130,A2-6-1,3b</tt>) added or (<tt>DSS0130,A2-6-1,3c</tt>) modified to all other instances. In addition, the end time for a subscription governs when the DSS automatically removes it from the DSS. Tests must demonstrate that (<tt>DSS0130,A2-6-1,3d</tt>) automatic removal of subscriptions occurs on all DSS instances.
+4. *DELETE Subscription:* Tests must demonstrate that a subscription can be (<tt>DSS0130,A2-6-1,4a</tt>) deleted on any DSS instance and (<tt>DSS0130,A2-6-1,4b</tt>) the deletion is reflected on all other DSS instances.
+5. *GET Subscription:* (<tt>DSS0130,A2-6-1,5</tt>) Tests must demonstrate that a specific subscription can be retrieved from any DSS instance with consistent results.
+6. *GET Subscriptions*: (<tt>DSS0130,A2-6-1,6</tt>) Tests must demonstrate that the complete set of subscriptions in an area for a Net-RID Display Provider can be retrieved from any DSS instance with consistent results.
 
 ### Test Environment Requirements
 
