Verify F3548 DSS requirements

--- a/monitoring/uss_qualifier/requirements/astm/f3548/v21.md
+++ b/monitoring/uss_qualifier/requirements/astm/f3548/v21.md
@@ -162,3 +162,13 @@ For information on these requirements, refer to [the ASTM standard F3548-21](htt
 * <tt>DSS0210</tt>
 * <tt>DSS0215</tt>
 * <tt>DSS0300</tt>
+
+Elaboration on testing methods for DSS0210 in section A2.7.2 implies the following requirements:
+
+1. *createOperationalIntentReference, updateOperationalIntentReference, createConstraintReference, updateConstraintReference:* Tests   must demonstrate that after an entity reference is created (<tt>DSS0210,A2-7-2,1a</tt>) or modified (<tt>DSS0210,A2-7-2,1b</tt>) on any DSS instance in the DSS pool, it can be retrieved from all DSS instances in the DSS pool with consistent results using queryOperationalIntentReferences (<tt>DSS0210,A2-7-2,1c</tt>), getOperationalIntentReference (<tt>DSS0210,A2-7-2,1d</tt>), queryConstraintReferences (<tt>DSS0210,A2-7-2,1e</tt>), and getConstraintReference (<tt>DSS0210,A2-7-2,1f</tt>).
+2. *createOperationalIntentReference, updateOperationalIntentReference:* Tests must demonstrate that entities may not be created (<tt>DSS0210,A2-7-2,2a</tt>) or modified (<tt>DSS0210,A2-7-2,2b</tt>) when necessary OVNs are not provided.
+3. *deleteOperationalIntentReference, deleteConstraintReference:* Tests must demonstrate that an entity reference can be deleted on any DSS instance in the DSS pool and the deletion is reflected on all DSS instances in the DSS pool using queryOperationalIntentReferences (<tt>DSS0210,A2-7-2,3a</tt>), getOperationalIntentReference (<tt>DSS0210,A2-7-2,3b</tt>), queryConstraintReferences (<tt>DSS0210,A2-7-2,3c</tt>), and getConstraintReference (<tt>DSS0210,A2-7-2,3d</tt>).
+4. *createSubscription, updateSubscription:* Tests must demonstrate that a subscription can be created on any DSS instance in the DSS pool, retrieved from any DSS instance in the DSS pool using getSubscription (<tt>DSS0210,A2-7-2,4a</tt>), and notifications for the subscription are triggered when intersecting entities are added (<tt>DSS0210,A2-7-2,4b</tt>) or modified (<tt>DSS0210,A2-7-2,4c</tt>) to any DSS instance within the DSS pool. In addition, the end time for a subscription governs when the DSS automatically removes it from the DSS. Tests must demonstrate that automatic removal of subscriptions occurs (<tt>DSS0210,A2-7-2,4d</tt>) on all DSS instances in the DSS pool.
+5. *deleteSubscription*: Tests must demonstrate that a subscription can be deleted on any DSS instance in the DSS pool and the deletion is reflected on all DSS instances in the DSS pool using getSubscription <tt>DSS0210,A2-7-2,5a</tt>, and notifications for the subscription are not triggered when intersecting entities are added <tt>DSS0210,A2-7-2,5b</tt> or modified <tt>DSS0210,A2-7-2,5c</tt> to all DSS instances in the DSS pool.
+6. *setUssAvailability:* Tests must demonstrate that USS availability can be set on any DSS instance in the DSS pool, and that availability is reflected on all DSS instances in the DSS pool using getUssAvailability <tt>DSS0210,A2-7-2,6</tt>.
+7. *All interfaces:* Tests must demonstrate that access to the interfaces is denied when a properly formed authorization with an appropriate authorization scope is not provided <tt>DSS0210,A2-7-2,7</tt>.
