[uss_qualifier] rid: dss0130 - check information relative to intersecting entities is properly sync'd

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.md
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.md
@@ -178,7 +178,7 @@
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v22a.md">DSS0130,A2-6-1,3c</a></td>
-    <td>Implemented + TODO</td>
+    <td>Implemented</td>
     <td><a href="../../../scenarios/astm/netrid/v22a/dss_interoperability.md">ASTM F3411-22a NetRID DSS interoperability</a></td>
   </tr>
   <tr>
